<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardCornerRadius="15dp"
    app:strokeColor="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/text_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/company"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/job_title"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text="@string/phone_number"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/address"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/website"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
